Mise en ligne : Finalisation Dashboard DG, correction visibilite clients et precision des calculs FCP

--- a/css/style.css
+++ b/css/style.css
@@ -8576,3 +8576,11 @@ form#edit-transaction-form button {
     color: #fff;
     padding: 4px;
 }
+
+.card.card-wrapper {
+    width: 100%;
+}
+
+.card.card-wrapper table {
+    width: 100%;
+}
